--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2023 Moses Beniana. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
